<resources>
    <string name="app_name">module_member</string>
    <string name="string_quick_login">快捷登陆</string>
    <string name="string_password_login">密码登录</string>
    <string name="string_edit_phone_number_hint">手机号码</string>
    <string name="string_edit_code_hint">验证码</string>
    <string name="string_edit_code_again">重新获取</string>
    <string name="string_edit_code_timer">%dS后重发</string>
    <string name="string_get_code">获取验证码</string>
    <string name="string_login_tip">温馨提醒：未注册喂食器App的手机号，登陆时将自动注册</string>
    <string name="string_login">登录</string>
    <string name="string_register">注册</string>
    <string name="string_third_method_login">第三方登录</string>
    <string name="string_wx_login_cancel">您取消了微信登录</string>
    <string name="string_wx_login_not_support">您的微信版本还不支持第三方登录</string>
    <string name="string_account_input">请输入账号</string>
    <string name="string_password_input">请输入密码</string>
    <string name="string_password_forget">忘记密码?</string>
    <string name="string_password_forget_title">忘记密码</string>
    <string name="string_legal_phone_number">请输入合法的手机号码</string>
    <string name="string_input_code">请输入验证码</string>
    <string name="string_login_ing">登陆中...</string>
    <string name="string_code_sending">验证码发送中...</string>
    <string name="string_code_have_send">验证短信已经发送到%s</string>
    <string name="string_wx_not_install">您还没有安装微信</string>
    <string name="string_check_password">请输入确认密码</string>
    <string name="string_commit_ing">提交中...</string>
    <string name="string_one_step"><![CDATA[<font color=\"#FF1A1A\">1.输入手机号</font> > 2.输入验证码 > 3.设置密码]]></string>
    <string name="string_two_step"><![CDATA[1.输入手机号 > <font color=\"#FF1A1A\">2.输入验证码</font> > 3.设置密码]]></string>
    <string name="string_three_step"><![CDATA[1.输入手机号 > 2.输入验证码 > <font color=\"#FF1A1A\">3.设置密码</font>]]></string>
    <string name="string_submit_code">提交验证码</string>
    <string name="string_submit">提交</string>
    <string name="string_modify">修改</string>
    <string name="string_confirm_password">确认密码</string>
    <string name="string_confirm_submit">确认提交</string>
    <string name="string_password_tip">密码长度8-32位，须包含数字、字母、符号至少2种或以上元素</string>
    <string name="string_set_password">设置密码</string>
    <string name="edit_user_info">编辑个人信息</string>
    <string name="ms_shop">梦视商城</string>
    <string name="ms_language">语言</string>
    <string name="device_manager">设备管理</string>
    <string name="pet_manager">宠物管理</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_me">关于我们</string>
    <string name="customer_service">客服</string>
    <string name="connect_wifi">连接WiFi</string>
    <string name="check_update">检查更新</string>
    <string name="data_reset">恢复出厂设置</string>
    <string name="sign_out">退出登陆</string>
    <string name="exiting">正在退出...</string>
    <string name="new_version">有新版本:V%s</string>
    <string name="current_version">当前版本:V%s</string>
    <string name="no_device">您还未绑定设备</string>
    <string name="string_pet_avatar">宠物头像</string>
    <string name="string_pet_name">宠物名字</string>
    <string name="string_pet_name_hint">请输入宠物名字</string>
    <string name="string_pet_breed">宠物品种</string>
    <string name="string_pet_breed_hint">请选择宠物品种</string>
    <string name="string_pet_breed_hint_short">选择宠物品种</string>
    <string name="string_pet_gender">宠物性别</string>
    <string name="string_pet_gender_hint">请选择宠物性别</string>
    <string name="string_pet_gender_hint_short">选择宠物性别</string>
    <string name="string_pet_birth">宠物生日</string>
    <string name="string_pet_birth_hint">请选择宠物生日</string>
    <string name="string_pet_weight">宠物体重</string>
    <string name="string_pet_weight_hint">请选择宠物体重(kg)</string>
    <string name="string_add_pet">添加宠物</string>
    <string name="string_edit_pet">编辑宠物</string>
    <string name="string_look_pet">查看宠物</string>
    <string name="string_british_shorthair">英国短毛猫</string>
    <string name="string_usa_shorthair">美国短毛猫</string>
    <string name="string_exotic_shorthair">异国短毛猫</string>
    <string name="string_other">其他</string>
    <string name="string_uploading">正在上传...</string>
    <string name="string_compress">正在压缩图片...</string>
    <string name="string_only_support_jpg">只支持jpg格式</string>
    <string name="string_pet_avatar_hint">请上传宠物头像</string>
    <string name="string_date_choose_tip">当前选择是未来时间，请重新设置生日</string>
    <string name="string_pet_user_protocol">用户协议</string>
    <string name="string_customer_service">客服</string>
    <string name="string_contract_us">联系我们：13989878430</string>
    <string name="string_add_user_info">添加用户信息</string>
    <string name="string_edit_user_info">编辑用户信息</string>
    <string name="string_view_user_info">查看用户信息</string>
    <string name="string_input_user_nick_hint">请输入昵称</string>
    <string name="string_choose_user_gender_hint">请选择性别</string>
    <string name="string_upload_user_avatar_hint">请上传头像</string>
    <string name="string_choose_user_birth_hint">请输入生日</string>
    <string name="string_user_avatar">用户头像</string>
    <string name="string_user_nick">用户昵称</string>
    <string name="string_user_gender">用户性别</string>
    <string name="string_user_birth">用户生日</string>
    <string name="string_language_zh">简体中文</string>
    <string name="string_language_en">English</string>
    <string name="string_language_choose">请选择语言</string>
</resources>
