<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <include layout="@layout/module_title_layout" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/string_three_step"
        android:textColor="#333333" />

    <com.punuo.sys.sdk.view.CleanEditText
        android:id="@+id/edit_input"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/ic_delete_grey"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999"
        android:textSize="14sp"
        tools:hint="@string/string_account_input" />

    <com.punuo.sys.sdk.view.CleanEditText
        android:id="@+id/edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/ic_delete_grey"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999"
        android:textSize="14sp"
        android:visibility="gone"
        tools:hint="@string/string_confirm_password"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp"
        android:text="@string/string_password_tip"
        android:textSize="11sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="#FFFFFF"
        tools:text="@string/string_get_code" />
</LinearLayout>