<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <com.punuo.sys.sdk.view.CleanEditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/ic_delete_grey"
        android:gravity="center_vertical"
        android:hint="@string/string_edit_phone_number_hint"
        android:inputType="phone"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999"
        android:textSize="14sp" />

    <com.punuo.sys.sdk.view.CleanEditText
        android:id="@+id/edit_code"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/edit_phone"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/get_code"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/ic_delete_grey"
        android:gravity="center_vertical"
        android:hint="@string/string_edit_code_hint"
        android:inputType="number"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/get_code"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/edit_phone"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_get_code_bg"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/string_get_code"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/login_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_code"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/string_login_tip"
        android:textColor="#999999"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/login_tip"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:text="@string/string_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:text="@string/string_register"
        android:textColor="#728BB2"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/third_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="#999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/string_third_method_login"
                android:textColor="#666666"
                android:textSize="13sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="#999999" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:id="@+id/wechat_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_login_with_wechat" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>