<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <com.punuo.sys.sdk.view.CleanEditText
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/ic_delete_grey"
        android:gravity="center_vertical"
        android:hint="@string/string_account_input"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999"
        android:textSize="14sp" />

    <com.punuo.sys.sdk.view.CleanEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/edit_account"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_edit_bg"
        android:drawableRight="@drawable/ic_delete_grey"
        android:gravity="center_vertical"
        android:hint="@string/string_password_input"
        android:inputType="textPassword"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColorHint="#999999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/edit_password"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:text="@string/string_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:textColor="#728BB2"
        android:textSize="14sp"
        android:text="@string/string_password_forget"
        android:layout_below="@+id/login_btn"
        android:layout_marginRight="12dp"
        android:layout_alignParentRight="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>